# pipeline_execution_planner_mvp

./: README.md  pyproject.toml
examples/: dependency.report.sample.json  validation.report.sample.json
src/pipeline_execution_planner/: __init__.py  cli.py  contract.py  dependency_loader.py  planner.py  reporter.py  validation_loader.py
tests/: test_bootstrap.py  test_cli.py  test_contract.py  test_dependency_loader.py  test_planner.py  test_reporter.py  test_validation_loader.py
